--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/cabonara.html">Cabonara Recipe</a>
+        <ul>
+            <li><a href="recipes/cabonara.html">Cabonara Recipe</li></a>
+            <li><a href="recipes/honeychicken.html">Honey Chicken</li></a>
+            <li><a href="recipes/shepherdspie.html">Shepherds Pie</li></a>
+        </ul>
 </body>
 </html>
