Editing element tags

--- a/recipes/cabonara.html
+++ b/recipes/cabonara.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Chicken Cabonara</h1>
-    <img class="mainImg" src="../images/Chicken Cabonara.jpg" alt="Chicken Cabonara">
+    <img src="../images/Chicken Cabonara.jpg" alt="Chicken Cabonara">
     
     <h3>Chicken Cabonara</h3>
       <p>Discover how to make superb chicken pasta Carbonara. This cheesy pasta dish is an Italian favourite and with the right technique, you can make it perfect every time</p>
