Applying stylesheet and reconstructing homepage layout

--- a/index.html
+++ b/index.html
@@ -4,14 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="" href="styles.css">
     <title>Odin Recipes</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-        <ul>
-            <li><a href="recipes/cabonara.html">Cabonara Recipe</li></a>
-            <li><a href="recipes/honeychicken.html">Honey Chicken</li></a>
-            <li><a href="recipes/shepherdspie.html">Shepherds Pie</li></a>
-        </ul>
+    <h1 class="title">Odin Recipes</h1>
+        <div id="recipes">
+            <div class="recipe-item">
+                <h3 class="sub-title"><a href="recipes/cabonara.html">Cabonara</a></h3>
+                <img class="small-img" src="images/Chicken Cabonara.jpg" alt="Chicken Cabonara">
+                <p>Try this Creamy Chicken Carbonara Pasta</p>
+            </div>
+    
+            <div class="recipe-item">
+                <h3 class="sub-title"><a href="recipes/honeychicken.html">Honey Chicken</a></h3>
+                <img class="small-img" src="images/Honey and Garlic Chicken.webp" alt="Honey Chicken">
+                <p>Never had sweetly glazed Chicken, try out this</p>
+            </div>
+    
+            <div class="recipe-item">
+                <h3 class="sub-title"><a href="recipes/shepherdspie.html">Shepherds Pie</a></h3>
+                <img class="small-img" src="images/Shepherd's Pie.jpg" alt="Shepherds Pie">
+                <p>Potatoes, Cheese and more, experience this all try this</p>
+            </div>
+        </div>
 </body>
 </html>
