--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1 class="title">Odin Recipes</h1>
-        <div id="recipes">
+        <div class="recipes">
             <div class="recipe-item">
                 <h3 class="sub-title"><a href="recipes/cabonara.html">Cabonara</a></h3>
                 <img class="small-img" src="images/Chicken Cabonara.jpg" alt="Chicken Cabonara">
