Linking page to styles.css

--- a/recipes/honeychicken.html
+++ b/recipes/honeychicken.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles.css">
     <title>Honey Chicken</title>
 </head>
 <body>
-    <h1 ">Honey Chicken</h1>
-      <img src="../images/Honey and Garlic Chicken.webp" alt="Chicken Cabonara">
+    <h1 class="title">Honey Chicken</h1> 
+    <div class="recipes indi-recipe">
+      <img class="medium-img" src="../images/Honey and Garlic Chicken.webp" alt="Chicken Cabonara">
     
-      <h3>Honey Chicken</h3>
-      <p>Discover how to make superb chicken pasta Carbonara. This cheesy pasta dish is an Italian favourite and with the right technique, you can make it perfect every time</p>
+      <p id="description">Discover how to make superb chicken pasta Carbonara. This cheesy pasta dish is an Italian favourite and with the right technique, you can make it perfect every time</p>
     
       <h3>Ingredients</h3>
       <ul>
@@ -38,5 +39,7 @@
         <li>Add extra pasta cooking water to keep it saucy (several tablespoons should do it). You don’t want it wet, just moist. Season with a little salt, if needed.</li><br>
         <li>Use a long-pronged fork to twist the pasta on to the serving plate or bowl. Serve immediately with a little sprinkling of the remaining cheese and a grating of black pepper. If the dish does get a little dry before serving, splash in some more hot pasta water and the glossy sauciness will be revived.</li><br>
       </ol>
+    </div>
+
 </body>
 </html>
